@@ -9,4 +9,7 @@ EXPENSIVE
 ROUTE
 APYA
 APYAZ
+APYA
+APYAZ
+ADA
 .
